Stack: the size of the stack